# ally-steam-patches

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: build.yaml
src/: main.rs  patch.rs  powerstation.rs  steam.rs  web_server.rs
src/patch/: tdp_slider.rs
