[package]
name = "steam-patch"
version = "2.0.0"
edition = "2021"

[dependencies]
sysinfo = "0.33.0"
zbus = { version = "5.1.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
axum = "0.7.9"
serde = { version = "1.0.215", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
dirs = "5.0.1"
glob = "0.3.1"
regex = "1.11.1"

[profile.release]
opt-level = 3          # Optimize for maximum speed
lto = true              # Enable Link Time Optimization (LTO) for smaller code size and better performance
panic = "abort"         # Avoid generating panic unwind information
codegen-units = 1       # Reduce the number of codegen units to improve inlining and optimization
strip = "debuginfo"     # Strip debug information to reduce size
debug = false           # Don't include debug information in the release build